nutype_test_suite/tests/ui/float/sanitize/duplicated.stderr
error: Duplicated sanitizer `with`.
       It happens, don't worry. We still love you!
 --> tests/ui/float/sanitize/duplicated.rs:6:9
  |
6 |         with = |n| n,
  |         ^^^^
